--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h1>
         <a href="http://github.com/idmillington/logstream">logstream</a>
         <span class="small">
-          by <a href="http://github.com/idmillington">idmillington</a>
+          by <a href="http://github.com/idmillington">Ian Millington</a>
         </span>
       </h1>
 
