Added more central data.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         complex, and include arbitrary data structures, but key-value
         pairs allow us to do some neat analysis). Lets say we begin with:
       </p>
-<pre>budget: 14000,
+<pre>title: Kitchen Interior,
+tags: [interior, furnishings, phase-3, kitchen],
+budget: 14000,
 deadline: 2011-12-18,
 responsible: Anne</pre>
       <p>
