--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@
       <p>
         Some custom messages might need special behavior. In most
         cases messages will also need to be created and viewed in a
-        user interface (UI) -- unknown message types are displayed and
-        created in a very primitive way, and can't easily be
-        created. UI handlers for editing a viewing a new message type
-        can be registered, and a core handler can be registered to
-        handle special message types.
+        user interface (UI) -- unknown message types are displayed in
+        a very primitive way, and can't easily be created. UI handlers
+        for editing a viewing a new message type can be registered,
+        and a core handler can be registered to handle special message
+        types.
       </p>
 
       <h2 id="perms">People and Permissions</h2>
