--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </h1>
 
       <div class="description">
-        Secure data and issue tracking.
+        Secure message logging and data tracking.
       </div>
 
       <h2>Logstreams</h2>
