--- a/index.html
+++ b/index.html
@@ -292,18 +292,18 @@
       </p>
       <p>
         Streams can be shared with multiple people. For each stream,
-        you can have a global list of people who can see that stream,
+        you can have a master list of people who can see that stream,
         and who can add messages to the stream.
       </p>
       <p>
         In addition, you can have further permission rules to fine
-        tune the permissions. You can have different rules for
-        different message types, or rules to limit who can modify
-        particular keys in the stream data. So for example, you might
-        want Anne's assistant, Carl, to be able to see the interior
-        design stream, but not anything related to the budget. You can
-        simply set Carl to not have read permissions on the budget or
-        budget modification messages.
+        tune access. You can have different rules for different
+        message types, or rules to limit who can modify particular
+        keys in the stream data. So for example, you might want Anne's
+        assistant, Carl, to be able to see the interior design stream,
+        but not anything related to the budget. You can simply set
+        Carl to not have read permissions on the budget or budget
+        modification messages.
       </p>
       <p>
         For a project, each user can drill down into the streams they
@@ -320,14 +320,14 @@
         key-value data associated with the stream can be analysed. For
         many kinds of data (anything for a time, date or quantities,
         for example), you can view the message stream as a graph. You
-        can ask to see the graph of the budget over time, for example.
+        can ask to see the graph of the budget over time. For example:
       </p>
       <div id="chart_div"></div>
       <p>
-        If you were using a logstream to chart the progress of a
-        project, you could use this to graph the defect rate over
-        time. For a logstream to track your weight loss, it could
-        graph your weight over time.
+        If you were using a stream to chart the progress of a project,
+        you could use this to graph the defect rate over time. For a
+        stream to track your weight loss, it could graph your
+        weight over time.
       </p>
 
       <h2 id="security">Security</h2>
